Update PlaceholderAPIExpansion.java